--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 <span class="detail-text">Bansal College Of Engineering, Bhopal</span>
                                 <span class="detail-subtext">Bachelor of Technology - BTech, Computer Science and
                                     Engineering</span>
-                                <span class="detail-date">Jun 2021 - Jul 2025 | CGPA: 7.39</span>
+                                <span class="detail-date">  SEPT 2021 - Jul 2025 | CGPA: 7.39</span>
                                 <p class="detail-description">Currently in 8th semester of Bachelor's degree program.
                                 </p>
                             </div>
@@ -156,24 +156,50 @@
             <div class="training-grid">
                 <div class="training-card">
                     <i class="fas fa-certificate"></i>
-                    <h3>Web Development Bootcamp</h3>
-                    <p class="training-date">2023</p>
-                    <p class="training-description">Comprehensive training in HTML, CSS, JavaScript, and modern web
-                        development frameworks.</p>
+                    <h3>KodNest</h3>
+                    <p class="training-date">Jan 2025 - Ongoing</p>
+                    <p class="training-description">Java/Python Full Stack Development</p>
+                    <div class="training-skills">
+                        <span>Core Java</span>
+                        <span>Python</span>
+                    </div>
                 </div>
                 <div class="training-card">
                     <i class="fas fa-certificate"></i>
-                    <h3>React.js Certification</h3>
-                    <p class="training-date">2023</p>
-                    <p class="training-description">Advanced training in React.js, including hooks, context API, and
-                        state management.</p>
+                    <h3>Cisco Networking Academy</h3>
+                    <p class="training-date">Aug 2024 - Nov 2024</p>
+                    <p class="training-description">Python Programming</p>
+                    <div class="training-skills">
+                        <span>Python</span>
+                    </div>
                 </div>
                 <div class="training-card">
                     <i class="fas fa-certificate"></i>
-                    <h3>UI/UX Design Fundamentals</h3>
-                    <p class="training-date">2023</p>
-                    <p class="training-description">Training in user interface design principles and user experience
-                        best practices.</p>
+                    <h3>PwSkills</h3>
+                    <p class="training-date">July 2023 - Feb 2024</p>
+                    <p class="training-description">MERN Stack Web Development</p>
+                    <div class="training-skills">
+                        <span>HTML, CSS</span>
+                        <span>JavaScript</span>
+                        <span>React</span>
+                        <span>MongoDB</span>
+                        <span>Express.js</span>
+                        <span>Node.js</span>
+                        <span>Git</span>
+                        <span>Postman Tool </span>
+                    </div>
+                </div>
+                <div class="training-card">
+                    <i class="fas fa-certificate"></i>
+                    <h3>SmarInternz</h3>
+                    <p class="training-date">July 2024 - Aug 2024</p>
+                    <p class="training-description">Salesforce Development</p>
+                    <div class="training-skills">
+                        <span>Salesforce Fundamentals</span>
+                        <span>LWC</span>
+                        <span>Apex</span>
+                        <span>Process Automation</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -181,31 +207,78 @@
 
     <section id="projects" class="projects">
         <div class="container">
-            <h2 class="section-title">Featured Projects</h2>
+            <h2 class="section-title">My Projects</h2>
             <div class="project-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/400x300" alt="Project 1">
+                        <img src="https://res.cloudinary.com/dbgvjxepr/image/upload/v1731103502/68747470733a2f2f7265732e636c6f7564696e6172792e636f6d2f646877627973686d6f2f696d6167652f75706c6f61642f76313639353238333639392f70726f6a656374253230696d616765732f6c6d732d686f6d652e706e67_kulmvk.png" alt="LMS Portal">
                     </div>
                     <div class="project-info">
-                        <h3>E-commerce Website</h3>
-                        <p>A fully responsive e-commerce platform with modern design and user-friendly interface.</p>
+                        <h3>LMS Portal</h3>
+                        <p class="project-description">A Learning Management System for education industry with course management, assignments, and learning materials.</p>
+                        <div class="project-skills">
+                            <span>React.js</span>
+                            <span>MongoDB</span>
+                            <span>Node.js</span>
+                            <span>Express.js</span>
+                            <span>Tailwind CSS</span>
+                        </div>
                         <div class="project-links">
-                            <a href="#" class="btn small">View Demo</a>
-                            <a href="#" class="btn small">Source Code</a>
+                            <a href="https://lms-mern-project-hghh.onrender.com/" target="_blank" rel="noopener noreferrer" class="btn small">View Demo</a>
+                            <a href="https://github.com/sandeepkrmehta/LMS-MERN-PROJECT" target="_blank" rel="noopener noreferrer" class="btn small">Source Code</a>
                         </div>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/400x300" alt="Project 2">
+                        <img src="https://res.cloudinary.com/dbgvjxepr/image/upload/v1732457265/Screenshot_2024-11-24_181740_oyrq1i.png" alt="Infosten">
                     </div>
                     <div class="project-info">
-                        <h3>Portfolio Website</h3>
-                        <p>A modern portfolio website showcasing creative work and professional experience.</p>
+                        <h3>Infosten</h3>
+                        <p class="project-description">A social forum application for volunteer registration in charitable teaching events.</p>
+                        <div class="project-skills">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                        </div>
                         <div class="project-links">
-                            <a href="#" class="btn small">View Demo</a>
-                            <a href="#" class="btn small">Source Code</a>
+                            <a href="https://infosten.netlify.app/" target="_blank" rel="noopener noreferrer" class="btn small">View Demo</a>
+                            <a href="https://github.com/sandeepkrmehta/Infosten" target="_blank" rel="noopener noreferrer" class="btn small">Source Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="https://res.cloudinary.com/dbgvjxepr/image/upload/v1731109128/Spotify_rl6t3j.png" alt="Spotify Clone">
+                    </div>
+                    <div class="project-info">
+                        <h3>Spotify Clone</h3>
+                        <p class="project-description">A music streaming application clone with playlist creation and music discovery features.</p>
+                        <div class="project-skills">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://sandeepkrmehta.github.io/Spotify-clone/" target="_blank" rel="noopener noreferrer" class="btn small">View Demo</a>
+                            <a href="https://github.com/sandeepkrmehta/Spotify-clone" target="_blank" rel="noopener noreferrer" class="btn small">Source Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="https://res.cloudinary.com/dbgvjxepr/image/upload/v1731102356/Hotel_h0ctuz.jpg" alt="Hotel Management System">
+                    </div>
+                    <div class="project-info">
+                        <h3>Hotel Management System</h3>
+                        <p class="project-description">A GUI-based system for managing hotel front desk operations including check-ins, check-outs, and reservations.</p>
+                        <div class="project-skills">
+                            <span>Python</span>
+                            <span>MySQL</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Priyansh-Gour/Hotel-management-system" target="_blank" rel="noopener noreferrer" class="btn small">View Demo</a>
+                            <a href="https://github.com/Priyansh-Gour/Hotel-management-system" target="_blank" rel="noopener noreferrer" class="btn small">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -267,6 +340,35 @@
             </div>
         </div>
     </footer>
+
+    <a href="#" class="back-to-top" id="backToTop">
+        <i class="fas fa-arrow-up"></i>
+    </a>
+
+    <div class="chatbot-container">
+        <button class="chatbot-button" id="chatbotButton">
+            <i class="fas fa-comments"></i>
+        </button>
+        <div class="chatbot-window" id="chatbotWindow">
+            <div class="chatbot-header">
+                <h3>Chat with Me</h3>
+                <button class="close-chat" id="closeChat">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="chatbot-messages" id="chatbotMessages">
+                <div class="message bot">
+                    <p>Hello! How can I help you today?</p>
+                </div>
+            </div>
+            <div class="chatbot-input">
+                <input type="text" id="chatInput" placeholder="Type your message...">
+                <button id="sendMessage">
+                    <i class="fas fa-paper-plane"></i>
+                </button>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
