--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                                 </div>
                                 <div class="contact-content-text">
                                     <h4>Location</h4>
-                                    <span>Bhopal, Madhya Pradesh, India</span>
+                                    <span>Noida, Uttar Pradesh, India</span>
                                 </div>
                             </div>
                         </div>
