--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
                             efficient. I enjoy writing clean code and creating smooth, intuitive user experiences. </p>
 
                         <div class="hero-cta" data-aos="fade-up" data-aos-delay="800">
+                            <a href="#contact" class="btn btn-secondary">
+                                <span>Hire Me</span>
+                                <i class="fas fa-message"></i>
+                            </a>
                             <a href="#projects" class="btn btn-primary">
                                 <span>View My Work</span>
                                 <i class="fas fa-arrow-right"></i>
@@ -542,7 +546,7 @@
             <div class="container">
                 <div class="section-header" data-aos="fade-up">
                     <span class="section-subtitle">My recent work</span>
-                    <h2 class="section-title">Featured Projects</h2>
+                    <h2 class="section-title">My Projects</h2>
                 </div>
 
                 <div class="projects-grid">
