remove skills confilict

--- a/index.html
+++ b/index.html
@@ -156,10 +156,6 @@
                             efficient. I enjoy writing clean code and creating smooth, intuitive user experiences. </p>
 
                         <div class="hero-cta" data-aos="fade-up" data-aos-delay="800">
-                            <a href="#contact" class="btn btn-secondary">
-                                <span>Hire Me</span>
-                                <i class="fas fa-message"></i>
-                            </a>
                             <a href="#projects" class="btn btn-primary">
                                 <span>View My Work</span>
                                 <i class="fas fa-arrow-right"></i>
@@ -283,11 +279,6 @@
             </div>
         </section>
 
-        <section id="skills" class="skills">
-            <div class="container">
-                <div class="section-header" data-aos="fade-up">
-                    <span class="section-subtitle">What I work with</span>
-                    <h2 class="section-title">Skills & Technologies</h2>
         <section id="skills" class="skills">
             <div class="container">
                 <div class="section-header" data-aos="fade-up">
@@ -768,75 +759,75 @@
     </main>
 
     <footer class="footer">
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-text">
-                    <p>&copy; <span id="currentYear">2024</span> Sandeep Mehta. All rights reserved.</p>
-                </div>
-                <div class="footer-social">
-                    <a href="https://github.com/sandeepkrmehta" target="_blank" rel="noopener noreferrer"
-                        class="social-link">
-                        <i class="fab fa-github"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/in/sandeep-kumar-mehta/" target="_blank" rel="noopener noreferrer"
-                        class="social-link">
-                        <i class="fab fa-linkedin"></i>
-                    </a>
-                    <a href="mailto:sandeepmehta.tech@gmail.com" class="social-link">
-                        <i class="fas fa-envelope"></i>
-                    </a>
-                    <a href="mailto:sandeepmehta.tech@gmail.com" class="social-link">
-                        <i class="fas fa-envelope"></i>
-                    </a>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-text">
+                        <p>&copy; <span id="currentYear">2024</span> Sandeep Mehta. All rights reserved.</p>
+                    </div>
+                    <div class="footer-social">
+                        <a href="https://github.com/sandeepkrmehta" target="_blank" rel="noopener noreferrer"
+                            class="social-link">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/sandeep-kumar-mehta/" target="_blank"
+                            rel="noopener noreferrer" class="social-link">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="mailto:sandeepmehta.tech@gmail.com" class="social-link">
+                            <i class="fas fa-envelope"></i>
+                        </a>
+                        <a href="mailto:sandeepmehta.tech@gmail.com" class="social-link">
+                            <i class="fas fa-envelope"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 
-    <!-- Back to Top -->
-    <button class="back-to-top" id="backToTop" aria-label="Back to top">
-        <i class="fas fa-chevron-up"></i>
-    </button>
-    <!-- Back to Top -->
-    <button class="back-to-top" id="backToTop" aria-label="Back to top">
-        <i class="fas fa-chevron-up"></i>
-    </button>
-
-    <!-- Chatbot -->
-    <!-- Chatbot -->
-    <div class="chatbot-container">
-        <button class="chatbot-toggle" id="chatbotToggle" aria-label="Open chat">
-        <button class="chatbot-toggle" id="chatbotToggle" aria-label="Open chat">
-            <i class="fas fa-comments"></i>
+        <!-- Back to Top -->
+        <button class="back-to-top" id="backToTop" aria-label="Back to top">
+            <i class="fas fa-chevron-up"></i>
         </button>
-        <div class="chatbot-window" id="chatbotWindow">
-            <div class="chatbot-header">
-                <h3>Chat with me</h3>
-                <button class="chatbot-close" id="chatbotClose" aria-label="Close chat">
-                <h3>Chat with me</h3>
-                <button class="chatbot-close" id="chatbotClose" aria-label="Close chat">
-                    <i class="fas fa-times"></i>
-                </button>
-            </div>
-            <div class="chatbot-messages" id="chatbotMessages">
-                <div class="message bot-message">
-                <div class="message bot-message">
-                    <p>Hello! How can I help you today?</p>
-                </div>
-            </div>
-            <div class="chatbot-input">
-                <input type="text" id="chatInput" placeholder="Type your message..." maxlength="500">
-                <button id="sendMessage" aria-label="Send message">
-                <input type="text" id="chatInput" placeholder="Type your message..." maxlength="500">
-                <button id="sendMessage" aria-label="Send message">
-                    <i class="fas fa-paper-plane"></i>
-                </button>
-            </div>
-        </div>
-    </div>
+        <!-- Back to Top -->
+        <button class="back-to-top" id="backToTop" aria-label="Back to top">
+            <i class="fas fa-chevron-up"></i>
+        </button>
 
-    <script src="script.js"></script>
+        <!-- Chatbot -->
+        <!-- Chatbot -->
+        <div class="chatbot-container">
+            <button class="chatbot-toggle" id="chatbotToggle" aria-label="Open chat">
+                <button class="chatbot-toggle" id="chatbotToggle" aria-label="Open chat">
+                    <i class="fas fa-comments"></i>
+                </button>
+                <div class="chatbot-window" id="chatbotWindow">
+                    <div class="chatbot-header">
+                        <h3>Chat with me</h3>
+                        <button class="chatbot-close" id="chatbotClose" aria-label="Close chat">
+                            <h3>Chat with me</h3>
+                            <button class="chatbot-close" id="chatbotClose" aria-label="Close chat">
+                                <i class="fas fa-times"></i>
+                            </button>
+                    </div>
+                    <div class="chatbot-messages" id="chatbotMessages">
+                        <div class="message bot-message">
+                            <div class="message bot-message">
+                                <p>Hello! How can I help you today?</p>
+                            </div>
+                        </div>
+                        <div class="chatbot-input">
+                            <input type="text" id="chatInput" placeholder="Type your message..." maxlength="500">
+                            <button id="sendMessage" aria-label="Send message">
+                                <input type="text" id="chatInput" placeholder="Type your message..." maxlength="500">
+                                <button id="sendMessage" aria-label="Send message">
+                                    <i class="fas fa-paper-plane"></i>
+                                </button>
+                        </div>
+                    </div>
+                </div>
+
+                <script src="script.js"></script>
 </body>
 
 </html>
